<resources>
    <string name="app_name">IP Address Calculator</string>
    <string name="ip">IP 0.0.0.0</string>
    <string name="subnet">SUBNET</string>
    <string name="net_id">Net ID</string>
    <string name="broadcast">Broadcast</string>
    <string name="total_ips">Total IPs</string>
    <string name="_0">0</string>
    <string name="hosts">Hosts</string>
    <string name="calcular">Calcular</string>
    <string name="bits_de_red">Bits de red</string>
    <string name="bits_de_host">Bits de host</string>
</resources>
