<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="#000000">

    <LinearLayout
        android:id="@+id/inputs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp">
        <EditText
            android:id="@+id/clientip"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:ems="10"
            android:digits="0123456789."
            android:textAlignment="center"
            android:layout_marginLeft="8dp"
            android:hint="@string/ip"
            android:textColorHint="#3f4f5056"
            android:textStyle="bold"
            />

        <EditText
            android:id="@+id/clientsubnet"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:layout_weight="1"
            android:digits="0123456789"
            android:textAlignment="center"
            android:layout_marginRight="8dp"
            android:hint="@string/subnet"
            android:textColorHint="#3f4f5056"
            android:textStyle="bold"
            android:inputType="textPersonName" />
    </LinearLayout>
    <TextView
        android:id="@+id/netidtext"
        android:layout_below="@id/inputs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="15sp"
        android:textStyle="bold"
        android:textColor="#ecffffff"
        android:background="@color/colorPrimaryDark"
        android:text="@string/net_id"/>
    <EditText
        android:id="@+id/netidinput"
        android:layout_below="@id/netidtext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:enabled="false"

        android:textStyle="bold"

        />
    <TextView
        android:id="@+id/broadcasttext"
        android:layout_below="@id/netidinput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="15sp"
        android:textStyle="bold"
        android:textColor="#ecffffff"
        android:background="#d64f5056"

        android:text="@string/broadcast"/>
    <EditText
        android:id="@+id/broadcastinput"
        android:layout_below="@id/broadcasttext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:textAlignment="center"
        android:enabled="false"
        android:textStyle="bold"
        />
    <TextView
        android:id="@+id/mascaratext"
        android:layout_below="@id/broadcastinput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="15sp"
        android:textStyle="bold"
        android:textColor="#ecffffff"
        android:background="#c84f5056"
        android:text="Mascara de red"/>
    <EditText
        android:id="@+id/mascarainput"
        android:layout_below="@id/mascaratext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:textAlignment="center"
        android:enabled="false"
        android:textStyle="bold"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/mascarainput"
        android:id="@+id/iphost"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="192dp"
            android:layout_height="match_parent"
            android:layout_below="@id/iphost"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/totalipstext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/total_ips"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textColor="#ffffff"
                android:background="#b94f5056"/>

            <EditText
                android:id="@+id/totalipsinput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:enabled="false"
                android:textColorHint="#3f4f5056"
                android:hint="0"
                android:textStyle="bold"
                android:textAlignment="center" />
        </LinearLayout>

    </LinearLayout>
    <LinearLayout
        android:id="@+id/layoutbits"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/iphost"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/clientlipstext"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#a54f5056"
                android:text="@string/hosts"
                android:textAlignment="center"
                android:textColor="#ffffff"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/clientipsinput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="8dp"
                android:enabled="false"
                android:hint="0"
                android:textAlignment="center"
                android:textColorHint="#3f4f5056"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"

            android:orientation="vertical">

            <TextView
                android:id="@+id/bitsdered"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#9b4f5056"
                android:text="@string/bits_de_red"
                android:textAlignment="center"
                android:textColor="#ffffff"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/bitsderedinput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:enabled="false"
                android:hint="0"
                android:textAlignment="center"
                android:textColorHint="#3f4f5056"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/bitsdehost"

                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#914f5056"
                android:text="@string/bits_de_host"
                android:textAlignment="center"
                android:textColor="#ffffff"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/bitsdehostinput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:enabled="false"
                android:hint="@string/_0"
                android:textAlignment="center"
                android:textColorHint="#3f4f5056"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/buttoncalcular"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:layout_below="@+id/layoutbits"
        android:background="#e9ba1e1e"
        android:textStyle="bold"
        android:textColor="#ffffff"
        android:onClick="calcular"
        android:text="@string/calcular" />
</RelativeLayout>